slight refactoring, getting ready to remake the run history screen